--- a/web3-storage-quickstart/package.json
+++ b/web3-storage-quickstart/package.json
@@ -8,6 +8,7 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
+        "axios": "^1.3.5",
         "minimist": "^1.2.5",
         "web3.storage": "^3.1.0"
     },
