--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.3.0-alpha3",
     "dotenv": "^16.0.3",
